utils/debug-tools.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-tools
  namespace: faf-ops
spec:
  terminationGracePeriodSeconds: 3
  containers:
    - name: archlinux
      image: archlinux
      command:
        - /bin/sh
        - "-c"
        - "tail -f /dev/null"
